change the device library to load YAML from devices folder change the data structure from separating pin and port to one connection. add code for pin template fix serializer and deserializer rename PinPort to Connection